增加配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /pkg/
 /spec/reports/
 /tmp/
+/spec/support/config/config.yml
+/spec/support/config/config.develop.yml
+/spec/support/config/config.uat.yml
 
 .byebug_history
 reapal-*.gem
